--- a/dashboard.html
+++ b/dashboard.html
@@ -15,6 +15,6 @@ if (!isset($_SESSION['username'])) {
 <body>
     <h1>Welcome, <?php echo htmlspecialchars($_SESSION['username']); ?>!</h1>
     <p>This is your dashboard.</p>
-    <a href="logout.php">Logout</a>
+    <a href="logout">Logout</a>
 </body>
 </html>
