--- a/index.html
+++ b/index.html
@@ -350,31 +350,31 @@ session_start(); // Start session
             Dreamscape is the ultimate Minecraft server experience where adventure and creativity collide. Join our vibrant community, explore unique gamemodes, and create memories that last a lifetime. Dive in and start your journey today!
         </p>
         <div id="gamemodes">
-            <div class="gamemode" onclick="location.href='bedwars.php';">
+            <div class="gamemode" onclick="location.href='bedwars';">
                 <img src="images/bedwars.jpg" alt="BedWars">
                 <h3>BedWars</h3>
                 <p>Compete with other teams to destroy their beds and be the last one standing.</p>
             </div>
 
-            <div class="gamemode" onclick="location.href='skywars.php';">
+            <div class="gamemode" onclick="location.href='skywars';">
                 <img src="images/skywars.jpg" alt="SkyWars">
                 <h3>SkyWars</h3>
                 <p>Fight in the sky and be the last player alive. Gather resources, craft weapons, and eliminate your opponents.</p>
             </div>
 
-            <div class="gamemode" onclick="location.href='luckyblockbedwars.php';">
+            <div class="gamemode" onclick="location.href='luckyblockbedwars';">
                 <img src="images/luckyblockbedwars.jpg" alt="LuckyBlockBedWars">
                 <h3>LuckyBlock BedWars</h3>
                 <p>Break lucky blocks to get unpredictable items that could change the course of the game.</p>
             </div>
 
-            <div class="gamemode" onclick="location.href='skyblock.php';">
+            <div class="gamemode" onclick="location.href='skyblock';">
                 <img src="images/skyblock.jpg" alt="SkyBlock">
                 <h3>SkyBlock</h3>
                 <p>Start on a tiny island in the sky. Gather resources, complete challenges, and expand your island.</p>
             </div>
 
-            <div class="gamemode" onclick="location.href='survival.php';">
+            <div class="gamemode" onclick="location.href='survival';">
                 <img src="images/survival.jpg" alt="Survival">
                 <h3>Survival</h3>
                 <p>Survive the harsh Minecraft world! Build, mine, craft, and fight to stay alive while exploring Dreamscape.</p>
