--- a/payment.html
+++ b/payment.html
@@ -1,7 +1,7 @@
 <?php
 session_start();
 if (!isset($_SESSION['username'])) {
-    header("Location: login.php");
+    header("Location: login");
     exit;
 }
 
@@ -20,7 +20,7 @@ if (isset($_GET['item'])) {
     if ($result->num_rows > 0) {
         $existingItem = $result->fetch_assoc()['item'];
         $_SESSION['error'] = "You already have an active " . htmlspecialchars($existingItem) . " subscription.";
-        header("Location: shop.php");
+        header("Location: shop");
         exit;
     }
     $stmt->close();
@@ -30,7 +30,7 @@ $item = $_GET['item'] ?? '';
 $username = $_GET['username'] ?? '';
 
 if (empty($item) || empty($username)) {
-    header("Location: shop.php");
+    header("Location: shop");
     exit;
 }
 
@@ -426,21 +426,21 @@ $price = $prices[$item] ?? 0.00;
             <span></span>
         </div>
         <div class="nav-menu">
-            <a href="index.php">Home</a>
-            <a href="about.php">About</a>
-            <a href="contact.php">Contact</a>
-            <a href="news.php">News</a>
-            <a href="shop.php">Shop</a>
-            <a href="inventory.php">Inventory</a>
+            <a href="index">Home</a>
+            <a href="about">About</a>
+            <a href="contact">Contact</a>
+            <a href="news">News</a>
+            <a href="shop">Shop</a>
+            <a href="inventory">Inventory</a>
             
             <!-- Auth links inside mobile menu -->
             <div class="mobile-auth-links">
                 <?php if (isset($_SESSION['username'])): ?>
                     <span>Welcome, <?php echo htmlspecialchars($_SESSION['username']); ?></span>
-                    <a href="logout.php">Logout</a>
+                    <a href="logout">Logout</a>
                 <?php else: ?>
-                    <a href="register.php">Register</a>
-                    <a href="login.php">Login</a>
+                    <a href="register">Register</a>
+                    <a href="login">Login</a>
                 <?php endif; ?>
             </div>
         </div>
@@ -449,10 +449,10 @@ $price = $prices[$item] ?? 0.00;
         <div class="desktop-auth-links">
             <?php if (isset($_SESSION['username'])): ?>
                 <span>Welcome, <?php echo htmlspecialchars($_SESSION['username']); ?></span>
-                <a href="logout.php">Logout</a>
+                <a href="logout">Logout</a>
             <?php else: ?>
-                <a href="register.php">Register</a>
-                <a href="login.php">Login</a>
+                <a href="register">Register</a>
+                <a href="login">Login</a>
             <?php endif; ?>
         </div>
     </nav>
@@ -479,7 +479,7 @@ $price = $prices[$item] ?? 0.00;
                 </div>
             </div>
 
-            <form class="payment-form" action="process_payment.php" method="POST">
+            <form class="payment-form" action="process_payment" method="POST">
                 <input type="hidden" name="item" value="<?php echo htmlspecialchars($item); ?>">
                 <input type="hidden" name="username" value="<?php echo htmlspecialchars($username); ?>">
                 
