--- a/process_payment.html
+++ b/process_payment.html
@@ -1,7 +1,7 @@
 <?php
 session_start();
 if (!isset($_SESSION['username'])) {
-    header("Location: login.php");
+    header("Location: login");
     exit;
 }
 
@@ -31,7 +31,7 @@ $checkStmt->store_result();
 
 if ($checkStmt->num_rows > 0) {
     $_SESSION['error'] = "You already have an active " . $item . " subscription.";
-    header("Location: shop.php");
+    header("Location: shop");
     exit;
 }
 
@@ -416,21 +416,21 @@ $conn->close();
             <span></span>
         </div>
         <div class="nav-menu">
-            <a href="index.php">Home</a>
-            <a href="about.php">About</a>
-            <a href="contact.php">Contact</a>
-            <a href="news.php">News</a>
-            <a href="shop.php">Shop</a>
-            <a href="inventory.php">Inventory</a>
+            <a href="index">Home</a>
+            <a href="about">About</a>
+            <a href="contact">Contact</a>
+            <a href="news">News</a>
+            <a href="shop">Shop</a>
+            <a href="inventory">Inventory</a>
             
             <!-- Auth links inside mobile menu -->
             <div class="mobile-auth-links">
                 <?php if (isset($_SESSION['username'])): ?>
                     <span>Welcome, <?php echo htmlspecialchars($_SESSION['username']); ?></span>
-                    <a href="logout.php">Logout</a>
+                    <a href="logout">Logout</a>
                 <?php else: ?>
-                    <a href="register.php">Register</a>
-                    <a href="login.php">Login</a>
+                    <a href="register">Register</a>
+                    <a href="login">Login</a>
                 <?php endif; ?>
             </div>
         </div>
@@ -439,10 +439,10 @@ $conn->close();
         <div class="desktop-auth-links">
             <?php if (isset($_SESSION['username'])): ?>
                 <span>Welcome, <?php echo htmlspecialchars($_SESSION['username']); ?></span>
-                <a href="logout.php">Logout</a>
+                <a href="logout">Logout</a>
             <?php else: ?>
-                <a href="register.php">Register</a>
-                <a href="login.php">Login</a>
+                <a href="register">Register</a>
+                <a href="login">Login</a>
             <?php endif; ?>
         </div>
     </nav>
@@ -489,9 +489,9 @@ $conn->close();
 
             <div class="action-buttons">
                 <?php if ($success): ?>
-                    <a href="inventory.php" class="btn btn-primary">View Inventory</a>
+                    <a href="inventory" class="btn btn-primary">View Inventory</a>
                 <?php endif; ?>
-                <a href="shop.php" class="btn btn-secondary">Return to Shop</a>
+                <a href="shop" class="btn btn-secondary">Return to Shop</a>
             </div>
         </div>
     </main>
