--- a/update_all_pages.html
+++ b/update_all_pages.html
@@ -1,22 +1,22 @@
 <?php
 // List of all pages to update
 $pages = [
-    'index.php',
-    'about.php',
-    'contact.php',
-    'news.php',
-    'shop.php',
-    'login.php',
-    'register.php',
-    'survival.php',
-    'skyblock.php',
-    'skywars.php',
-    'bedwars.php',
-    'luckyblockbedwars.php',
-    'purchase.php',
-    'validate_purchase.php',
-    'process_payment.php',
-    'payment.php'
+    'index',
+    'about',
+    'contact',
+    'news',
+    'shop',
+    'login',
+    'register',
+    'survival',
+    'skyblock',
+    'skywars',
+    'bedwars',
+    'luckyblockbedwars',
+    'purchase',
+    'validate_purchase',
+    'process_payment',
+    'payment'
 ];
 
 // The template content
