--- a/shop.html
+++ b/shop.html
@@ -368,21 +368,21 @@ session_start(); // Start session
             <span></span>
         </div>
         <div class="nav-menu">
-            <a href="index.php">Home</a>
-            <a href="about.php">About</a>
-            <a href="contact.php">Contact</a>
-            <a href="news.php">News</a>
-            <a href="shop.php">Shop</a>
-            <a href="inventory.php">Inventory</a>
+            <a href="index">Home</a>
+            <a href="about">About</a>
+            <a href="contact">Contact</a>
+            <a href="news">News</a>
+            <a href="shop">Shop</a>
+            <a href="inventory">Inventory</a>
             
             <!-- Auth links inside mobile menu -->
             <div class="mobile-auth-links">
                 <?php if (isset($_SESSION['username'])): ?>
                     <span>Welcome, <?php echo htmlspecialchars($_SESSION['username']); ?></span>
-                    <a href="logout.php">Logout</a>
+                    <a href="logout">Logout</a>
                 <?php else: ?>
-                    <a href="register.php">Register</a>
-                    <a href="login.php">Login</a>
+                    <a href="register">Register</a>
+                    <a href="login">Login</a>
                 <?php endif; ?>
             </div>
         </div>
@@ -391,10 +391,22 @@ session_start(); // Start session
         <div class="desktop-auth-links">
             <?php if (isset($_SESSION['username'])): ?>
                 <span>Welcome, <?php echo htmlspecialchars($_SESSION['username']); ?></span>
-                <a href="logout.php">Logout</a>
+                <a href="logout">Logout</a>
             <?php else: ?>
-                <a href="register.php">Register</a>
-                <a href="login.php">Login</a>
+                <a href="register">Register</a>
+                <a href="login">Login</a>
+            <?php endif; ?>
+        </div>
+    </nav>
+        
+        <!-- Auth links for desktop view -->
+        <div class="desktop-auth-links">
+            <?php if (isset($_SESSION['username'])): ?>
+                <span>Welcome, <?php echo htmlspecialchars($_SESSION['username']); ?></span>
+                <a href="logout">Logout</a>
+            <?php else: ?>
+                <a href="register">Register</a>
+                <a href="login">Login</a>
             <?php endif; ?>
         </div>
     </nav>
@@ -419,7 +431,7 @@ session_start(); // Start session
                     <li>Daily rewards bonus</li>
                 </ul>
                 <div class="price">$1.00</div>
-                <a href="purchase.php?item=VIP" class="buy-button">Purchase VIP</a>
+                <a href="purchase?item=VIP" class="buy-button">Purchase VIP</a>
             </div>
 
             <div class="product-card">
@@ -435,7 +447,7 @@ session_start(); // Start session
                     <li>Exclusive monthly rewards</li>
                 </ul>
                 <div class="price">$5.00</div>
-                <a href="purchase.php?item=Premium" class="buy-button">Purchase Premium</a>
+                <a href="purchase?item=Premium" class="buy-button">Purchase Premium</a>
             </div>
 
             <div class="product-card">
@@ -451,7 +463,7 @@ session_start(); // Start session
                     <li>Exclusive events access</li>
                 </ul>
                 <div class="price">$20.00</div>
-                <a href="purchase.php?item=Ultimate" class="buy-button">Purchase Ultimate</a>
+                <a href="purchase?item=Ultimate" class="buy-button">Purchase Ultimate</a>
             </div>
         </div>
     </main>
