--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@ session_start(); // Start session
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
     // ---- REPLACE THESE ----
-    const SUPABASE_URL = 'https://<YOUR-PROJECT>.supabase.co';     // from Supabase Settings → API
-    const SUPABASE_ANON_KEY = '<YOUR-ANON-KEY>';                   // anon/public key (browser)
+    const SUPABASE_URL = 'https://ytjlknmtfwlhqcgszxid.supabase.co';     // from Supabase Settings → API
+    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inl0amxrbm10ZndsaHFjZ3N6eGlkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY1NTQ0MDMsImV4cCI6MjA3MjEzMDQwM30.75uy04cQzIZt3j63TT8oBdPbYngALamU7t4rKMYXoaY';                   // anon/public key (browser)
     const SERVER_ID = 'dreamscape-main';                          // choose same id in plugin config
     // ------------------------
 
