--- a/about.html
+++ b/about.html
@@ -125,6 +125,18 @@
             transition: all 0.3s ease-in-out;
         }
 
+        /* Hide nav-menu by default on mobile */
+        @media screen and (max-width: 768px) {
+            .nav-menu {
+                display: none;
+            }
+
+            /* Show nav-menu when active */
+            .nav-menu.active {
+                display: flex !important;
+            }
+        }
+
         /* Hamburger Menu Styling */
         .hamburger {
             display: none;
@@ -159,6 +171,65 @@
             transform: translateY(-9px) rotate(-45deg);
         }
 
+        /* Mobile menu active state */
+        .nav-menu.active {
+            left: 0;
+        }
+
+        /* Special styling for auth buttons */
+        .auth-btn {
+            background: linear-gradient(45deg, #ff6b6b, #ee5a24);
+            border: 2px solid #ff4757;
+            color: white;
+            padding: 12px 24px;
+            border-radius: 25px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            position: relative;
+            overflow: hidden;
+            transition: all 0.3s ease;
+            text-decoration: none;
+            display: inline-block;
+        }
+
+        .auth-btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: left 0.5s;
+        }
+
+        .auth-btn:hover::before {
+            left: 100%;
+        }
+
+        .auth-btn:hover {
+            background: linear-gradient(45deg, #ee5a24, #ff6b6b);
+            border-color: #ff3742;
+            transform: translateY(-3px);
+            box-shadow: 0 6px 15px rgba(255, 107, 107, 0.4);
+        }
+
+        .register-btn {
+            background: linear-gradient(45deg, #ff6b6b, #ee5a24);
+        }
+
+        .login-btn {
+            background: linear-gradient(45deg, #3742fa, #2f3542);
+            border-color: #5352ed;
+        }
+
+        .login-btn:hover {
+            background: linear-gradient(45deg, #2f3542, #3742fa);
+            border-color: #3742fa;
+            box-shadow: 0 6px 15px rgba(55, 66, 250, 0.4);
+        }
+
         /* Responsive styles */
         @media screen and (max-width: 768px) {
             .hamburger {
@@ -169,6 +240,87 @@
             
             .nav-menu.active {
                 left: 0;
+            }
+
+            .nav-menu a {
+                margin: 8px 0;
+                font-size: 1.2rem;
+                display: block;
+                width: 100%;
+                text-align: center;
+                padding: 16px 20px;
+                border-radius: 12px;
+                border: none;
+                background: linear-gradient(135deg, rgba(0, 255, 136, 0.1) 0%, rgba(0, 204, 119, 0.05) 100%);
+                backdrop-filter: blur(15px);
+                transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+                position: relative;
+                overflow: hidden;
+                color: white;
+                text-decoration: none;
+                font-weight: 500;
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            }
+
+            .nav-menu a::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: -100%;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(90deg, transparent, rgba(0, 255, 136, 0.15), transparent);
+                transition: left 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+                z-index: -1;
+            }
+
+            .nav-menu a::after {
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 0;
+                height: 0;
+                background: radial-gradient(circle, rgba(0, 255, 136, 0.2) 0%, transparent 70%);
+                transition: all 0.4s ease;
+                transform: translate(-50%, -50%);
+                border-radius: 50%;
+                z-index: -1;
+            }
+
+            .nav-menu a:hover::before {
+                left: 100%;
+            }
+
+            .nav-menu a:hover::after {
+                width: 300px;
+                height: 300px;
+            }
+
+            .nav-menu a:hover {
+                background: linear-gradient(135deg, rgba(0, 255, 136, 0.2) 0%, rgba(0, 204, 119, 0.1) 100%);
+                color: #00ff88;
+                transform: translateY(-2px) scale(1.02);
+                box-shadow: 0 8px 25px rgba(0, 255, 136, 0.3);
+                text-shadow: 0 0 10px rgba(0, 255, 136, 0.5);
+            }
+
+            .nav-menu a:active {
+                transform: translateY(0) scale(0.98);
+        /* Keyframe animations for menu */
+        @keyframes slideInMenuItem {
+            from {
+                opacity: 0;
+                transform: translateX(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        /* Special styling for auth buttons */
+                transition: all 0.1s ease;
             }
 
             /* Mobile welcome text specific styling */
@@ -347,5 +499,77 @@
             <button class="join-button" onclick="copyServerIP()">Join Now</button>
         </div>
     </main>
+
+    <!-- Footer Section -->
+    <footer class="footer-section">
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <h3>Dreamscape</h3>
+                    <p>The ultimate Minecraft server experience where adventure and creativity collide.</p>
+                    <div class="social-links">
+                        <a href="#" class="social-link" aria-label="Discord">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515a.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/>
+                            </svg>
+                        </a>
+                        <a href="#" class="social-link" aria-label="Twitter">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/>
+                            </svg>
+                        </a>
+                        <a href="#" class="social-link" aria-label="YouTube">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="footer-links">
+                    <div class="footer-column">
+                        <h4>Navigation</h4>
+                        <ul>
+                            <li><a href="index">Home</a></li>
+                            <li><a href="about">About</a></li>
+                            <li><a href="news">News</a></li>
+                            <li><a href="shop">Shop</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer-column">
+                        <h4>Support</h4>
+                        <ul>
+                            <li><a href="contact">Contact Us</a></li>
+                            <li><a href="#">Help Center</a></li>
+                            <li><a href="#">Rules</a></li>
+                            <li><a href="#">Report Player</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer-column">
+                        <h4>Community</h4>
+                        <ul>
+                            <li><a href="#">Discord Server</a></li>
+                            <li><a href="#">Forums</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Leaderboards</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <div class="footer-bottom-content">
+                    <p>&copy; 2024 Dreamscape. All rights reserved.</p>
+                    <div class="footer-bottom-links">
+                        <a href="#">Privacy Policy</a>
+                        <a href="#">Terms of Service</a>
+                        <a href="#">Cookie Policy</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
