--- a/about.html
+++ b/about.html
@@ -118,6 +118,18 @@
             opacity: 1;
         }
 
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1em 2em;
+            background: linear-gradient(135deg, #0a0f1a 0%, #1a233a 100%);
+            position: relative;
+            z-index: 100;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid rgba(0, 255, 136, 0.1);
+        }
 
         .nav-menu {
             display: flex;
@@ -462,6 +474,18 @@
         .join-button:hover {
             background: #45a049;
             transform: translateY(-2px);
+        }
+
+        /* Keyframe animations for menu */
+        @keyframes slideInMenuItem {
+            from {
+                opacity: 0;
+                transform: translateX(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
         }
     </style>
 </head>
