--- a/news.html
+++ b/news.html
@@ -40,6 +40,18 @@
             min-height: 100vh;
         }
 
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1em 2em;
+            background: linear-gradient(135deg, #0a0f1a 0%, #1a233a 100%);
+            position: relative;
+            z-index: 100;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid rgba(0, 255, 136, 0.1);
+        }
 
         .auth-links {
             display: flex;
